# api_flask

./: aplicacaoTkin.py  build.py  crud.py  pyproject.toml  server.py
